examples/transmission-deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: transmission
  namespace: transmission
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: transmission
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: transmission
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: transmission-config
            optional: false
        - secretRef:
            name: vpn-creds
            optional: false
        image: haugene/transmission-openvpn
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 2
          successThreshold: 1
          tcpSocket:
            port: 9091
          timeoutSeconds: 2
        name: transmission
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 2
          successThreshold: 2
          tcpSocket:
            port: 9091
          timeoutSeconds: 2
        resources:
          limits:
            memory: 2000Mi
        securityContext:
          allowPrivilegeEscalation: true
          capabilities:
            add:
            - NET_ADMIN
          privileged: true
        volumeMounts:
        - mountPath: /data
          name: data
        - mountPath: /dev/net/tun
          name: tunnel
        - mountPath: /etc/localtime
          name: localtime
          readOnly: true
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
      - name: data
        nfs:
          path: /Transmission
          server: nfs-server
      - hostPath:
          path: /dev/net/tun
          type: ""
        name: tunnel
      - hostPath:
          path: /etc/localtime
          type: ""
        name: localtime
